Add LazyConstant (JEP 531) and JDK 27 feature roadmap
Implemented:
- GpuCapability: convert volatile + DCL to LazyConstant<GpuInfo>
  for JIT constant-folding after first GPU probe

LABS.md updates:
- Added JDK 27 / Valhalla Feature Roadmap section covering:
  - ✅ Value Classes (JEP 401): 6 records converted
  - ✅ Lazy Constants (JEP 531): GpuCapability converted
  - 🟢 Compact Object Headers (JEP 534): free memory savings
  - 🟢 G1 Default GC (JEP 523): simplifies deployment
  - 🟡 Null-Restricted Types: future Valhalla feature
  - 🟡 Vector API finalization: waiting for Valhalla
  - 🟡 Structured Concurrency (JEP 533)
  - 🟡 Primitive Types in Patterns (JEP 532)